--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,16 @@
 {
   "name": "calico-store-backend",
   "version": "1.0.0",
-
   "main": "server.js",
+  "type": "module",
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "crypto-random-string": "^5.0.0",
+    "dotenv": "^17.2.1",
+    "express": "^4.21.2",
+    "nodemailer": "^7.0.5",
+    "uuid": "^11.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
